create icon component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,14 @@
-Icon
-<i class="fas fa-camera"></i>
+Icons as font or as image
+
+<br>
+<div>
+    <app-icon icon="camera" color="green" size="big"></app-icon>
+    
+    <app-icon icon="./assets/icon2.png" color="green" size="big"></app-icon>
+
+    <app-icon icon="house" color="red" size="big"></app-icon>
+
+    <app-icon icon="./assets/icon1.png" color="red" size="big"></app-icon>
+</div>
+
+
